--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,13 +17,9 @@ jobs:
         run: |
           pip install --upgrade pip
           pip install -r ./requirements.txt
-      - name: '开始运行'
+      - name: '开始签到'
         id: signin-outputs
         env:
-          # 不需要的推送形式可以直接注释，反之你需要取消注释            
-          NOTIFIER_TYPE: ${{ secrets.NOTIFIER_TYPE }} 
-          # EMAIL_CONFIG: ${{ secrets.EMAIL_CONFIG }}
-          # WECHAT_ROBOT_URL: ${{ secrets.WECHAT_ROBOT_URL }}
           ACCOUNTS: ${{ secrets.ACCOUNTS }}
         run: |
           python ./main.py
